fixed cutoff error

--- a/server/static/css/styles.css
+++ b/server/static/css/styles.css
@@ -179,7 +179,7 @@ nav {
     .organization-container .right-grid .social-links {
       display: grid;
       grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
-      grid-gap: 20px; }
+      grid-gap: 15px; }
       .organization-container .right-grid .social-links img {
         width: 100%; }
   .organization-container .right .interests {
