--- a/server/static/sass/imports/pages/_organization.scss
+++ b/server/static/sass/imports/pages/_organization.scss
@@ -51,7 +51,7 @@
       .social-links {
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(30px, 1fr));
-        grid-gap: 20px;
+        grid-gap: 15px;
 
         & img {
           width: 100%;
